--- a/Mirf/library.properties
+++ b/Mirf/library.properties
@@ -1,4 +1,4 @@
-name=WebServer
+name=Mirf
 version=1.0.0
 author=Cristian Maglie <c.maglie@example.com>, Pippo Pluto <pippo@example.com>
 maintainer=Cristian Maglie <c.maglie@example.com>
@@ -7,4 +7,4 @@ paragraph=Supports HTTP1.1 and you can do GET and POST.
 category=Communication
 url=http://example.com/
 architectures=avr
-includes=WebServer.h
+includes=Mirf.h
